fix sentence truncation

--- a/src/pages/mainScreen/components/conversationsPages/styles/styles.scss
+++ b/src/pages/mainScreen/components/conversationsPages/styles/styles.scss
@@ -104,7 +104,6 @@ $appbarHeight: 64px;
   }
 
   &__message-text {
-    max-width: 80%;
     color: #e8e8e8;
     margin: 0;
     overflow: hidden;
